--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ MANIFEST
 *.swp
 *.pyc
 *.obj
-examples/v0p4p2/**
-examples/fsps/**
+original_examples/v0p4p2/**
+original_examples/fsps/**
 wvgsolver.egg-info/
